--- a/notebooks/SeSiMe_MS_side.ipynb
+++ b/notebooks/SeSiMe_MS_side.ipynb
@@ -1505,9 +1505,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:SeSiMe-env]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-SeSiMe-env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1519,7 +1519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
