Minor changes to MS_functions and minor update to unique-smiles notebook.

--- a/notebooks/SeSiMe_MS_side_gnps_unique_smiles.ipynb
+++ b/notebooks/SeSiMe_MS_side_gnps_unique_smiles.ipynb
@@ -90,7 +90,7 @@
     "## Documents\n",
     "\n",
     "+ Peaks were removed using an exponential fit to the peak intensity distribution. \n",
-    "+ Worudocuments wh"
+    "+ Words were created using 2 decimals."
    ]
   },
   {
@@ -173,6 +173,23 @@
    ],
    "source": [
     "MS_measure.preprocess_documents(0.2, create_stopwords = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique words:  56520\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of unique words: \", len(MS_measure.dictionary))"
    ]
   },
   {
