Fixed: sorting of peaks by m/z before creating documents.

--- a/notebooks/SeSiMe_MS_side_gnps_allSMILES.ipynb
+++ b/notebooks/SeSiMe_MS_side_gnps_allSMILES.ipynb
@@ -118,12 +118,12 @@
     "# Import / Load data\n",
     "results_file = \"filtered_data_allSMILES.json\"\n",
     "\n",
-    "spectra1, spectra_dict1, MS_documents1, MS_documents_intensity1 = MS_functions.load_MGF_data(PATH_SAVE_DATA,\n",
+    "spectra, spectra_dict, MS_documents, MS_documents_intensity = MS_functions.load_MGF_data(PATH_SAVE_DATA,\n",
     "                  mgf_file, \n",
     "                 results_file = results_file,\n",
     "                 num_decimals = 2,\n",
     "                 min_frag = 0.0, max_frag = 1000.0,\n",
-    "                 min_loss = 10.0, max_loss = 200.0,\n",
+    "                 min_loss = 10.0, max_loss = 300.0,\n",
     "                 exp_intensity_filter = 0.01,\n",
     "                 min_peaks = 10,\n",
     "                 peaks_per_mz = 20/200)"
@@ -149,20 +149,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['peak_71.06', 'peak_79.06', 'peak_85.48', 'peak_89.04', 'peak_89.40', 'peak_91.95', 'peak_95.05', 'peak_101.03', 'peak_105.05', 'peak_107.05', 'peak_108.05', 'peak_111.05', 'peak_116.06', 'peak_117.03', 'peak_118.04', 'peak_135.02', 'peak_135.04', 'peak_136.05', 'peak_137.04', 'peak_137.17', 'peak_145.03', 'peak_145.09', 'peak_146.03', 'peak_163.04', 'peak_163.29', 'peak_163.51', 'peak_164.01', 'peak_164.04', 'peak_177.07', 'peak_183.08', 'peak_205.07', 'peak_265.09', 'peak_295.19', 'loss_17.90', 'loss_48.00', 'loss_108.02', 'loss_130.01', 'loss_136.02', 'loss_149.05', 'loss_149.09', 'loss_149.58', 'loss_149.80', 'loss_150.05', 'loss_167.06', 'loss_168.00', 'loss_168.06', 'loss_175.92', 'loss_176.05', 'loss_177.04', 'loss_178.05', 'loss_178.07', 'loss_195.05', 'loss_196.06', 'loss_197.03']\n"
+      "['peak_210.06', 'peak_301.18', 'peak_183.12', 'peak_149.09', 'peak_125.10', 'peak_134.08', 'peak_129.07', 'peak_241.17', 'peak_157.11', 'peak_155.08', 'peak_161.13', 'peak_307.19', 'peak_127.04', 'peak_213.13', 'peak_286.19', 'peak_269.16', 'peak_137.06', 'peak_231.14', 'peak_257.20', 'peak_303.20', 'peak_159.08', 'peak_136.13', 'peak_302.18', 'peak_242.17', 'peak_211.11', 'peak_295.18', 'peak_283.17', 'peak_345.21', 'peak_363.22', 'peak_285.19', 'peak_271.17', 'peak_121.07', 'peak_199.15', 'peak_105.07', 'peak_189.13', 'peak_169.10', 'peak_201.13', 'peak_107.08', 'peak_243.18', 'peak_119.09', 'peak_121.10', 'peak_135.12', 'peak_185.13', 'peak_211.14', 'peak_131.08', 'peak_161.10', 'peak_171.11', 'peak_95.09', 'peak_91.06', 'peak_313.18', 'peak_173.14', 'peak_145.10', 'peak_331.19', 'peak_289.18', 'loss_85.07', 'loss_103.08', 'loss_117.10', 'loss_135.11', 'loss_141.10', 'loss_145.09', 'loss_146.11', 'loss_147.11', 'loss_153.12', 'loss_159.11', 'loss_162.10', 'loss_163.10', 'loss_165.12', 'loss_177.12', 'loss_179.14', 'loss_191.10', 'loss_205.11', 'loss_206.12', 'loss_207.12', 'loss_217.15', 'loss_235.16', 'loss_237.15', 'loss_237.18', 'loss_238.23', 'loss_247.16', 'loss_249.15', 'loss_259.16', 'loss_263.16', 'loss_265.17', 'loss_275.16', 'loss_277.18', 'loss_279.19', 'loss_287.16', 'loss_287.20', 'loss_289.21', 'loss_291.19', 'loss_293.22', 'loss_299.20']\n"
      ]
     }
    ],
    "source": [
     "# Have a look at how a document looks like:\n",
-    "print(MS_documents1[0])"
+    "print(MS_documents[6])"
    ]
   },
   {
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "len(MS_documents1)  # number of spectra = number of documents"
+    "len(MS_documents)  # number of spectra = number of documents"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "source": [
     "from Similarities import SimilarityMeasures\n",
     "\n",
-    "MS_measure = SimilarityMeasures(MS_documents1)"
+    "MS_measure = SimilarityMeasures(MS_documents)"
    ]
   },
   {
@@ -539,7 +539,7 @@
    "source": [
     "query_id = 43\n",
     "print(MS_measure.Cdistances_ctr[query_id, :10])\n",
-    "MS_functions.plot_smiles(query_id, spectra_dict1, MS_measure, num_candidates = 10, \n",
+    "MS_functions.plot_smiles(query_id, spectra_dict, MS_measure, num_candidates = 10, \n",
     "                   sharex=True, labels=False, dist_method = \"centroid\")"
    ]
   },
@@ -574,11 +574,11 @@
    ],
    "source": [
     "print(\"1\")\n",
-    "print(MS_documents1[35])\n",
+    "print(MS_documents[35])\n",
     "print(\"2\")\n",
-    "print(MS_documents1[36]) \n",
+    "print(MS_documents[36]) \n",
     "print(\"3\")\n",
-    "print(MS_documents1[37])"
+    "print(MS_documents[37])"
    ]
   },
   {
@@ -626,11 +626,11 @@
    ],
    "source": [
     "print(\"1\")\n",
-    "print(np.sort(np.round(np.array(spectra1[35].peaks)[:,0], 2)))\n",
+    "print(np.sort(np.round(np.array(spectra[35].peaks)[:,0], 2)))\n",
     "print(\"2\")\n",
-    "print(np.sort(np.round(np.array(spectra1[36].peaks)[:,0], 2)))\n",
+    "print(np.sort(np.round(np.array(spectra[36].peaks)[:,0], 2)))\n",
     "print(\"3\")\n",
-    "print(np.sort(np.round(np.array(spectra1[37].peaks)[:,0], 2)))"
+    "print(np.sort(np.round(np.array(spectra[37].peaks)[:,0], 2)))"
    ]
   },
   {
@@ -654,11 +654,11 @@
    "source": [
     "# the SMILES for all three spectra are the same!\n",
     "print(\"1\")\n",
-    "print(spectra1[35].smiles)\n",
+    "print(spectra[35].smiles)\n",
     "print(\"2\")\n",
-    "print(spectra1[36].smiles)\n",
+    "print(spectra[36].smiles)\n",
     "print(\"3\")\n",
-    "print(spectra1[37].smiles)"
+    "print(spectra[37].smiles)"
    ]
   },
   {
@@ -691,7 +691,7 @@
    "source": [
     "query_id = 37\n",
     "print(MS_measure.Cdistances_ctr[query_id, :10])\n",
-    "MS_functions.plot_smiles(query_id, spectra_dict1, MS_measure, num_candidates = 1, \n",
+    "MS_functions.plot_smiles(query_id, spectra_dict, MS_measure, num_candidates = 1, \n",
     "                   sharex=True, labels=False, dist_method = \"centroid\")"
    ]
   },
@@ -732,9 +732,9 @@
     }
    ],
    "source": [
-    "print(spectra1[35].spectrum_id)\n",
-    "print(spectra1[36].spectrum_id)\n",
-    "print(spectra1[37].spectrum_id)"
+    "print(spectra[35].spectrum_id)\n",
+    "print(spectra[36].spectrum_id)\n",
+    "print(spectra[37].spectrum_id)"
    ]
   },
   {
@@ -875,7 +875,7 @@
    "source": [
     "query_id = 35\n",
     "print(MS_measure.Cdistances_ctr[query_id, :10])\n",
-    "MS_functions.plot_smiles(query_id, spectra_dict1, MS_measure, num_candidates = 10, \n",
+    "MS_functions.plot_smiles(query_id, spectra_dict, MS_measure, num_candidates = 10, \n",
     "                   sharex=True, labels=False, dist_method = \"centroid\")"
    ]
   },
@@ -1121,7 +1121,7 @@
    "source": [
     "query_id = 110\n",
     "print(MS_measure.Cdistances_ae[query_id, :10])\n",
-    "MS_functions.plot_smiles(query_id, spectra_dict1, MS_measure, num_candidates = 10, \n",
+    "MS_functions.plot_smiles(query_id, spectra_dict, MS_measure, num_candidates = 10, \n",
     "                   sharex=True, labels=False, dist_method = \"autoencoder\")"
    ]
   },
@@ -1289,7 +1289,7 @@
    "source": [
     "query_id = 110\n",
     "print(MS_measure.Cdistances_pca[query_id, :10])\n",
-    "MS_functions.plot_smiles(query_id, spectra_dict1, MS_measure, num_candidates = 10, \n",
+    "MS_functions.plot_smiles(query_id, spectra_dict, MS_measure, num_candidates = 10, \n",
     "                   sharex=True, labels=False, dist_method = \"pca\")"
    ]
   }
