Update example notebooks (some changes in folder structure)

--- a/notebooks/SeSiMe_MS_side_gnps_allSMILES.ipynb
+++ b/notebooks/SeSiMe_MS_side_gnps_allSMILES.ipynb
@@ -354,6 +354,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "73.64134115120984"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc_lengths = []\n",
+    "for doc in MS_documents1:\n",
+    "    doc_lengths.append(len(doc))\n",
+    "\n",
+    "np.mean(np.array(doc_lengths))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
