Minor changes to BGC window size notebook

--- a/notebooks/SeSiMe_BGC_side_windows_size_exploration.ipynb
+++ b/notebooks/SeSiMe_BGC_side_windows_size_exploration.ipynb
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -493,6 +493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### first observations\n",
     "The example above (BGC 20) shows that the small window size does produce much less consitent distance values!\n",
     "It gives totally different BGCs a distance of 0.2, while very good matches can be about 0.18. That is not consitent and discriminative enough. \n",
     "\n",
@@ -547,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another attemt with \n",
+    "### Another attemt with \n",
     "+ even larger window size \n",
     "+ less dimension reduction (here to 200 instead of 100)\n",
     "+ longer training (500 instead of 250 iterations)"
