--- a/notebooks/SeSiMe_MS_gnps_unique_smiles_word2vec_01.ipynb
+++ b/notebooks/SeSiMe_MS_gnps_unique_smiles_word2vec_01.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (2) Mass spec side\n",
+    "### Mass spec side\n",
     "Import MS data and create documents.\n",
     "\n",
     "Here: Use NOT Crusemann data, but other dataset where smilea are known for all spectra.\n",
@@ -94,7 +94,10 @@
     "## Documents\n",
     "\n",
     "+ Peaks were removed using an exponential fit to the peak intensity distribution. \n",
-    "+ Words were created using 2 decimals."
+    "+ Words were created using 2 decimals.\n",
+    "\n",
+    "### Interesting to note: \n",
+    "+ Not discriminating between **loss and peak has only very little influence on final result. Test was done with naming all peaks and losses by \"mz_....\". "
    ]
   },
   {
@@ -2205,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -2214,7 +2217,7 @@
        "Text(0.5, 0, 'molecular similarity (morgan3 fingerprint)')"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2233,6 +2236,7 @@
    ],
    "source": [
     "fig, ax = plt.subplots(figsize=(10,10))\n",
+    "#select = np.where(tanimoto_similarities_m3 > 0.7)\n",
     "select = np.where(M_sim_lsi*M_sim_ctr > 0.4)\n",
     "ax.scatter(tanimoto_similarities_m3[select], M_sim_lsi[select]*M_sim_ctr[select], s=10, alpha=0.1)\n",
     "plt.ylabel(\"spectral similarity (lsi)\")\n",
@@ -2738,9 +2742,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:SeSiMe-env]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-SeSiMe-env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2752,7 +2756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
