Small comments added to notebook.

--- a/notebooks/SeSiMe_MS_gnps_unique_smiles_word2vec_01.ipynb
+++ b/notebooks/SeSiMe_MS_gnps_unique_smiles_word2vec_01.ipynb
@@ -97,7 +97,7 @@
     "+ Words were created using 2 decimals.\n",
     "\n",
     "### Interesting to note: \n",
-    "+ Not discriminating between **loss and peak has only very little influence on final result. Test was done with naming all peaks and losses by \"mz_....\". "
+    "+ Not discriminating between **loss** and **peak** has only very little influence on final result. Test was done with naming all peaks and losses by \"mz_....\". See load_MGF_data function using parameter: peak_loss_words = ['mz_', 'mz_']"
    ]
   },
   {
