--- a/notebooks/SeSiMe_MS_gnps_unique_smiles_word2vec_01.ipynb
+++ b/notebooks/SeSiMe_MS_gnps_unique_smiles_word2vec_01.ipynb
@@ -203,6 +203,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Note\n",
+    "In total it would be about 100.000 words. Many occur only once in the entire corpus and are hence filtered out (makes not sense to place them somewhere in word-space, would be arbitrary!).\n",
+    "\n",
+    "Few also are filtered out because they occur too often (in more than 20% of the spectra). Those words have little discriminative power and are hence ignored. Might still be worth keeping them in for comparison!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Word2Vec -based approach\n",
     "### Compare different training parameters\n",
     "\n",
@@ -609,6 +619,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Note\n",
+    "Technically, Tanimoto is not the right naming here!\n",
+    "FOr the rdkit default fingerprints (**Daylight**) I here indeed used Tanimoto similarity to compare fingerprints. \n",
+    "\n",
+    "But for the morgen-3 or **ECFP-6** finterprints it is actually a Dice score!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 233,
    "metadata": {},
@@ -691,6 +712,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Zoom in to high similarity values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 239,
    "metadata": {},
@@ -726,6 +754,13 @@
     "ax.scatter(tanimoto_similarities_m3[select], M_sim_ctr[select], s=10, alpha=0.1)\n",
     "plt.ylabel(\"spectral similarity (centroid)\")\n",
     "plt.xlabel(\"molecular similarity (morgan3 fingerprint)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare molecular similarity scores with Mol.Net scoring"
    ]
   },
   {
@@ -2756,7 +2791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
