minor notebook update

--- a/notebooks/SeSiMe_MS_side2.ipynb
+++ b/notebooks/SeSiMe_MS_side2.ipynb
@@ -748,9 +748,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SeSiMe-ubuntu",
+   "display_name": "Python [conda env:SeSiMe-env]",
    "language": "python",
-   "name": "sesime-ubuntu"
+   "name": "conda-env-SeSiMe-env-py"
   },
   "language_info": {
    "codemirror_mode": {
