Minor update to benchmarking notebook.

--- a/notebooks/SeSiMe_MS_gnps_unique_smiles_benchmarking_measures.ipynb
+++ b/notebooks/SeSiMe_MS_gnps_unique_smiles_benchmarking_measures.ipynb
@@ -1006,7 +1006,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1190,7 +1190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### So far, doesn't seem to perform better than word2vec alone!\n",
+    "### So far, doesn't seem to perform better than word2vec alone!\n",
     "(using this type of benchmarking measure)"
    ]
   },
