Add MolNet score based comparison to notebook.

--- a/notebooks/SeSiMe_MS_gnps_unique_smiles_network_graph.ipynb
+++ b/notebooks/SeSiMe_MS_gnps_unique_smiles_network_graph.ipynb
@@ -218,7 +218,7 @@
      "output_type": "stream",
      "text": [
       "All 'words' of the given documents were found in the trained word2vec model.\n",
-      "  Calculated centroid vectors for  9550  of  9550  documents. Calculated centroid vectors for  8610  of  9550  documents.Calculated distances between  9550  documents.\n"
+      "  Calculated centroid vectors for  9550  of  9550  documents. documents. 6380  of  9550  documents. 6530  of  9550  documents. 8000  of  9550  documents. of  9550  documents.Calculated distances between  9550  documents.\n"
      ]
     }
    ],
@@ -355,6 +355,47 @@
     "csvFile.close()\n",
     "\n",
     "# TODO: check error with csv files --> some lines start with \""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare to MolNet score based network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load MolNet score matrix\n",
+    "filename = PATH_SAVE_DATA + \"MolNet_gnps_uniquesmiles_exp001_loss500_minpeak10_dec2_tol02_minmatch2_minintens_001.npy\"\n",
+    "#molnet_sim = np.load(filename)  # this loads without checking for missing values\n",
+    "\n",
+    "molnet_sim = MS_functions.molnet_matrix(spectra, \n",
+    "                  tol = 0.2, \n",
+    "                  max_mz = 1000, \n",
+    "                  min_mz = 0, \n",
+    "                  min_match = 2, \n",
+    "                  min_intens = 0.01,\n",
+    "                  filename = filename,\n",
+    "                  method = 'fast')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MS_functions.MS_similarity_network(MS_measure, \n",
+    "                          similarity_method=\"centroid\", \n",
+    "                          link_method = \"single\", \n",
+    "                          filename=\"MS_MolNet_01.graphml\", \n",
+    "                          cutoff = 0.7,\n",
+    "                          max_links = 10)"
    ]
   }
  ],
