Minor update of BGC notebook.

--- a/notebooks/SeSiMe_BGC_side_windows_size_exploration.ipynb
+++ b/notebooks/SeSiMe_BGC_side_windows_size_exploration.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,8 +115,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\FlorianHuber\\Anaconda3\\lib\\site-packages\\gensim\\utils.py:1212: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
-      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -141,7 +139,7 @@
     }
    ],
    "source": [
-    "BGC_measure.preprocess_documents(0.2, create_stopwords = False)"
+    "BGC_measure.preprocess_documents(0.2, create_stopwords = False, min_frequency = 2)"
    ]
   },
   {
@@ -163,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1098,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
