minor changes to notebooks.

--- a/notebooks/SeSiMe_BGC_side_windows_size_exploration.ipynb
+++ b/notebooks/SeSiMe_BGC_side_windows_size_exploration.ipynb
@@ -181,14 +181,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Calculated centroid vectors for  5927  of  5927  documents.5927  documents.Calculated distances between  5927  documents.\n"
+      "All 'words' of the given documents were found in the trained word2vec model.\n",
+      "  Calculated centroid vectors for  5927  of  5927  documents.  documents.Calculated distances between  5927  documents.\n"
      ]
     }
    ],
