minor notebook cleaning...

--- a/notebooks/SeSiMe_MS_gnps_unique_smiles_in-depth_examples.ipynb
+++ b/notebooks/SeSiMe_MS_gnps_unique_smiles_in-depth_examples.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# SeSiMe\n",
-    "### Sentence/Sequence Similarity Measure"
+    "(Sentence/Sequence Similarity Measure)"
    ]
   },
   {
@@ -14,7 +14,15 @@
    "source": [
     "## This notebook:  In-depth comparison of spectrum-spectrum similarity scoring.\n",
     "\n",
-    "### 'Labeled data' is here: GNPS Dataset of 11134 spectra with smiles."
+    "+ 'Labeled data' from GNPS Dataset of 11134 spectra with unique smiles."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 1: Importing, first pre-processing \n",
+    "Loading data, importing packages, first pre-processing steps..."
    ]
   },
   {
@@ -31,7 +39,6 @@
     "PATH_SESIME = ROOT + \"\\\\SeSiMe\\\\\"\n",
     "\n",
     "PATH_NPLINKER = ROOT + \"\\\\nplinker\\\\prototype\\\\\"\n",
-    "#mgf_file = PATH_MS_DATA + \"GNPSLibraries_allSMILES.mgf\"\n",
     "mgf_file = PATH_MS_DATA + \"GNPSLibraries_uniqueSMILES_withFeatureIDs.mgf\""
    ]
   },
@@ -135,16 +142,16 @@
    "metadata": {},
    "source": [
     "### Note\n",
-    "In total it would be about 100.000 words. Many occur only once in the entire corpus and are hence filtered out (makes not sense to place them somewhere in word-space, would be arbitrary!).\n",
+    "In total it would be about 100.000 words. Many occur only once in the entire corpus and are hence filtered out. Otherwise they can end up being placed largely randomly in word-space...\n",
     "\n",
-    "Few also are filtered out because they occur too often (in more than 20% of the spectra). Those words have little discriminative power and are hence ignored. Might still be worth keeping them in for comparison!"
+    "Few also are filtered out because they occur too often (in more than 20% of the spectra). Those words have little discriminative power and are hence ignored. Might still be worth keeping them in for comparison (as I expect that they will anyway be downrated a lot later on by using the tfidf for weighing)!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Word2Vec -based approach\n",
+    "## Part 2: Train Word2Vec model and derive spectrum vectors\n",
     "### 1) Model trained on unique smiles dataset only."
    ]
   },
@@ -171,7 +178,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -197,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculate/load the different score matrices\n",
+    "## Part 3: Calculate/load the different score matrices\n",
     "### all-vs-all matrix of spectrum-spectrum similarity scores\n",
     "+ Word2Vec-centroid similarity scores\n",
     "+ Cosine similarity scores\n",
@@ -413,7 +422,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query: select possible spectral pairs of interest!"
+    "## Part 4:  Query: select possible spectral pairs of interest!\n",
+    "+ select cases based on cosine score, modified cosine score, word2vec-based score and actual molecular similarity."
    ]
   },
   {
