Added functions to calculate score matrices for all scores: cosine, mod.cosine, morgan3, word2vec

--- a/notebooks/SeSiMe_MS_Grimur_spectra.ipynb
+++ b/notebooks/SeSiMe_MS_Grimur_spectra.ipynb
@@ -44,16 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Could not find file  C:\\OneDrive - Netherlands eScience Center\\Project_Wageningen_iOMEGA\\SeSiMe\\data\\ filtered_data_Grimur_minpeak10_loss500_2dec_10ppm.json\n",
-      "New data from  C:\\OneDrive - Netherlands eScience Center\\Project_Wageningen_iOMEGA\\SeSiMe\\data\\SPECTRA_grimur\\  will be imported.\n",
-      "  Load spectrum  3880  of  4138  spectra. 1010  of  4138  spectra."
+      "Spectra json file found and loaded.\n"
      ]
     }
    ],
@@ -87,21 +85,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocess documents...\n",
+      "Number of unique words:  35775\n"
+     ]
+    }
+   ],
    "source": [
     "from Similarities import SimilarityMeasures\n",
     "MS_measure = SimilarityMeasures(MS_documents)\n",
     "MS_measure.preprocess_documents(0.2, min_frequency = 2, create_stopwords = False)\n",
-    "print(\"Number of unique words: \", len(MS_measure.dictionary)"
+    "print(\"Number of unique words: \", len(MS_measure.dictionary))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train spec2vec/word2vec model and derive similarity matrix"
+    "## Part 2: Train spec2vec/word2vec model and spectrum vectors\n",
+    "### 1) Train on dataset itself"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored word2vec model not found!\n",
+      "Calculating new word2vec model...\n",
+      " Epoch  100  of  100 ."
+     ]
+    }
+   ],
+   "source": [
+    "#file_model_word2vec = PATH_SAVE_MODEL + 'model_w2v_MS_gnps_uniquesmiles_d300_w300_iter100_loss500_minpeak10_dec2.model'\n",
+    "#file_model_word2vec = PATH_SAVE_MODEL + 'model_w2v_MS_allgnps_d300_w300_iter100_loss500_minpeak10_dec2.model'\n",
+    "file_model_word2vec = PATH_SAVE_MODEL + 'model_w2v_MS_Grimur_d300_w300_iter100_loss500_minpeak10_dec2.model'\n",
+    "MS_measure.build_model_word2vec(file_model_word2vec, size=300, window=300, \n",
+    "                             min_count=1, workers=4, iter=100, \n",
+    "                             use_stored_model=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All 'words' of the given documents were found in the trained word2vec model.\n",
+      "Using present tfidf model.\n",
+      "  Calculated centroid vectors for  4138  of  4138  documents."
+     ]
+    }
+   ],
+   "source": [
+    "# Use peak intensities as extra weights\n",
+    "MS_measure.get_vectors_centroid(method = 'update', #'ignore',\n",
+    "                             extra_weights = MS_documents_intensity, \n",
+    "                             tfidf_weighted = True, \n",
+    "                             weight_method = None, #'sqrt', \n",
+    "                             tfidf_model = None,\n",
+    "                             extra_epochs = 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 3: Calculate/load the different score matrices\n",
+    "### all-vs-all matrix of spectrum-spectrum similarity scores\n",
+    "+ Word2Vec-centroid similarity scores\n",
+    "+ Cosine similarity scores\n",
+    "+ Modified cosine scores (MolNet)\n",
+    "+ Molecular similarity scores based on molecular fingerprints. Unless stated otherwise: Dice score based on morgen-3 fingerprints."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate all-vs-all matrix for Word2Vec scores "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import spatial\n",
+    "M_sim_ctr = 1 - spatial.distance.cdist(MS_measure.vectors_centroid, MS_measure.vectors_centroid, 'cosine')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate/load modified cosine score (here using \"fast\" way)\n",
+    "+ Be aware: calculating those is **very slow** !\n",
+    "+ Function below will load the given file and only calculate the scores from scratch if no such file is found.\n",
+    "+ Method choices are 'fast' or 'hungarian', the latter being more exact but even slower."
    ]
   },
   {
@@ -110,10 +213,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_model_word2vec = PATH_SAVE_MODEL + 'model_w2v_MS_gnps_uniquesmiles_d300_w300_iter100_loss500_minpeak10_dec2.model'\n",
-    "MS_measure.build_model_word2vec(file_model_word2vec, size=300, window=300, \n",
-    "                             min_count=1, workers=4, iter=100, \n",
-    "                             use_stored_model=True)"
+    "filename = PATH_SAVE_DATA + \"MolNet_Grimur_tol02_minmatch6.npy\"\n",
+    "molnet_sim = MS_functions.molnet_matrix(spectra, \n",
+    "                                          tol = 0.2, \n",
+    "                                          max_mz = 1000, \n",
+    "                                          min_mz = 0, \n",
+    "                                          min_match = 6, \n",
+    "                                          min_intens = 0.01,\n",
+    "                                          filename = filename,\n",
+    "                                          method = 'fast', #'hungarian',\n",
+    "                                          num_workers = 8,\n",
+    "                                          safety_points = 50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate/load cosine scores \n",
+    "+ Calculating is much faster than the modified cosine score, but can still become **slow**, especially when using small tolerances and little filtering (resulting in many peaks...). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Could not find file  test0000\n",
+      "Cosine scores will be calculated from scratch.\n",
+      "Calculate pairwise cosine scores by  4 number of workers.\n",
+      "  Calculated cosine for pair  90 -- 94 . (  100.0  % done)."
+     ]
+    }
+   ],
+   "source": [
+    "filename = PATH_SAVE_DATA + \"Cosine_Grimur_tol02_minmatch6.npy\"\n",
+    "cosine_sim = MS_functions.cosine_matrix(spectra[:100], \n",
+    "                                      tol = 0.2, \n",
+    "                                      max_mz = 1000, \n",
+    "                                      min_mz = 0, \n",
+    "                                      min_match = 6, \n",
+    "                                      min_intens = 0,\n",
+    "                                      filename = filename,\n",
+    "                                      num_workers = 4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate/load molecular similarity scores\n",
+    "+ first calculate molecular fingerprints\n",
+    "+ then calculate (or load if file exists) molecular similarity scores.  \n",
+    "\n",
+    "Method for calculating fingerprints here can be \"morgan1\", \"morgan2\", \"morgan3\" or \"daylight\". For morgan fingerprints scores will be based on Dice scores. For \"daylight\" fingerprint it will be Tanimoto scores. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "molecules, fingerprints_m3, exclude_IDs = MS_functions.get_mol_fingerprints(spectra_dict, method = \"morgan3\")\n",
+    "exclude = [np.where(np.array(sub_spectra_metadata)[:,1] == x)[0][0] for x in exclude_IDs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = PATH_SAVE_DATA + \"tanimoto_Grimur_morgan3.npy\"\n",
+    "molecular_similarities = MS_functions.tanimoto_matrix(spectra, \n",
+    "                                                      fingerprints_m3,\n",
+    "                                                      filename = filename)"
    ]
   }
  ],
