Added more documentation

--- a/notebooks/SeSiMe_MS_Grimur_spectra.ipynb
+++ b/notebooks/SeSiMe_MS_Grimur_spectra.ipynb
@@ -14,14 +14,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Change folder names to fit yours...\n",
     "ROOT = \"C:\\\\OneDrive - Netherlands eScience Center\\\\Project_Wageningen_iOMEGA\"\n",
+    "\n",
+    "# Folder with all the *.ms files:\n",
     "PATH_MS_DATA = ROOT + \"\\\\SeSiMe\\\\data\\\\SPECTRA_grimur\\\\\"\n",
+    "\n",
+    "# Folders to store the word2vec model and processed data:\n",
     "PATH_SAVE_MODEL = ROOT + \"\\\\SeSiMe\\\\models_trained\\\\\"\n",
     "PATH_SAVE_DATA = ROOT + \"\\\\SeSiMe\\\\data\\\\\"\n",
+    "\n",
+    "# Folder with cloned SeSiMe repo: https://github.com/florian-huber/SeSiMe\n",
     "PATH_SESIME = ROOT + \"\\\\SeSiMe\\\\\"\n",
     "\n",
-    "PATH_NPLINKER = ROOT + \"\\\\nplinker\\\\prototype\\\\\"\n",
-    "mgf_file = PATH_MS_DATA + \"GNPSLibraries_uniqueSMILES_withFeatureIDs.mgf\""
+    "# Folder with nplinker repo (to use a load_spectra function)\n",
+    "PATH_NPLINKER = ROOT + \"\\\\nplinker\\\\prototype\\\\\""
    ]
   },
   {
@@ -40,6 +47,15 @@
     "\n",
     "import numpy as np\n",
     "from metabolomics import load_spectra"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import spectra and filter peaks\n",
+    "+ Here using an varying intensity threshold that is derived by fitting an exponential to the intensity histogram.\n",
+    "+ Setting exp_intensity_filter to None will switch this off. In that case either no filtering is done (min_intensity_perc = 0), or peaks are removed if their intensit is below min_intensity_perc"
    ]
   },
   {
@@ -66,7 +82,7 @@
     "                 min_frag = 0.0, max_frag = 1000.0,\n",
     "                 min_loss = 5.0, max_loss = 500.0,\n",
     "                 min_intensity_perc = 0.0,\n",
-    "                 exp_intensity_filter = 0.01,\n",
+    "                 exp_intensity_filter = 0.01, #None,\n",
     "                 min_peaks = 10,\n",
     "                 peaks_per_mz = 15/200,\n",
     "                 merge_energies = True,\n",
@@ -116,7 +132,8 @@
    "metadata": {},
    "source": [
     "## Part 2: Train spec2vec/word2vec model and spectrum vectors\n",
-    "### 1) Train on dataset itself"
+    "### 1) Train on dataset itself\n",
+    "+ Either use pre-trained model, or train a new one from scratch (takes about 30minutes?)"
    ]
   },
   {
@@ -138,6 +155,7 @@
     "#file_model_word2vec = PATH_SAVE_MODEL + 'model_w2v_MS_gnps_uniquesmiles_d300_w300_iter100_loss500_minpeak10_dec2.model'\n",
     "#file_model_word2vec = PATH_SAVE_MODEL + 'model_w2v_MS_allgnps_d300_w300_iter100_loss500_minpeak10_dec2.model'\n",
     "file_model_word2vec = PATH_SAVE_MODEL + 'model_w2v_MS_Grimur_d300_w300_iter100_loss500_minpeak10_dec2.model'\n",
+    "\n",
     "MS_measure.build_model_word2vec(file_model_word2vec, size=300, window=300, \n",
     "                             min_count=1, workers=4, iter=100, \n",
     "                             use_stored_model=True)"
@@ -163,7 +181,7 @@
     "MS_measure.get_vectors_centroid(method = 'update', #'ignore',\n",
     "                             extra_weights = MS_documents_intensity, \n",
     "                             tfidf_weighted = True, \n",
-    "                             weight_method = None, #'sqrt', \n",
+    "                             weight_method = 'sqrt', #None,\n",
     "                             tfidf_model = None,\n",
     "                             extra_epochs = 5)"
    ]
