--- a/notebooks/SeSiMe_MS_Grimur_spectra.ipynb
+++ b/notebooks/SeSiMe_MS_Grimur_spectra.ipynb
@@ -55,7 +55,8 @@
    "source": [
     "## Import spectra and filter peaks\n",
     "+ Here using an varying intensity threshold that is derived by fitting an exponential to the intensity histogram.\n",
-    "+ Setting exp_intensity_filter to None will switch this off. In that case either no filtering is done (min_intensity_perc = 0), or peaks are removed if their intensit is below min_intensity_perc"
+    "+ Setting exp_intensity_filter to None will switch this off. In that case either no filtering is done (min_intensity_perc = 0), or peaks are removed if their intensit is below min_intensity_perc*max(intensity)\n",
+    "+ The importing functions are still a bit messy... "
    ]
   },
   {
@@ -190,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 3: Calculate/load the different score matrices\n",
+    "## Part 3: Calculate/load the different similarity matrices (aka kernels)\n",
     "### all-vs-all matrix of spectrum-spectrum similarity scores\n",
     "+ Word2Vec-centroid similarity scores\n",
     "+ Cosine similarity scores\n",
@@ -212,7 +213,7 @@
    "outputs": [],
    "source": [
     "from scipy import spatial\n",
-    "M_sim_ctr = 1 - spatial.distance.cdist(MS_measure.vectors_centroid, MS_measure.vectors_centroid, 'cosine')"
+    "kernel_word2vec = 1 - spatial.distance.cdist(MS_measure.vectors_centroid, MS_measure.vectors_centroid, 'cosine')"
    ]
   },
   {
@@ -232,7 +233,7 @@
    "outputs": [],
    "source": [
     "filename = PATH_SAVE_DATA + \"MolNet_Grimur_tol02_minmatch6.npy\"\n",
-    "molnet_sim = MS_functions.molnet_matrix(spectra, \n",
+    "kernel_molnet = MS_functions.molnet_matrix(spectra, \n",
     "                                          tol = 0.2, \n",
     "                                          max_mz = 1000, \n",
     "                                          min_mz = 0, \n",
@@ -270,7 +271,7 @@
    ],
    "source": [
     "filename = PATH_SAVE_DATA + \"Cosine_Grimur_tol02_minmatch6.npy\"\n",
-    "cosine_sim = MS_functions.cosine_matrix(spectra[:100], \n",
+    "kernel_cosine = MS_functions.cosine_matrix(spectra[:100], \n",
     "                                      tol = 0.2, \n",
     "                                      max_mz = 1000, \n",
     "                                      min_mz = 0, \n",
@@ -308,7 +309,7 @@
    "outputs": [],
    "source": [
     "filename = PATH_SAVE_DATA + \"tanimoto_Grimur_morgan3.npy\"\n",
-    "molecular_similarities = MS_functions.tanimoto_matrix(spectra, \n",
+    "kernel_morgan3 = MS_functions.tanimoto_matrix(spectra, \n",
     "                                                      fingerprints_m3,\n",
     "                                                      filename = filename)"
    ]
