--- a/notebooks/SeSiMe_MS_Grimur_spectra.ipynb
+++ b/notebooks/SeSiMe_MS_Grimur_spectra.ipynb
@@ -271,7 +271,7 @@
    ],
    "source": [
     "filename = PATH_SAVE_DATA + \"Cosine_Grimur_tol02_minmatch6.npy\"\n",
-    "kernel_cosine = MS_functions.cosine_matrix(spectra[:100], \n",
+    "kernel_cosine = MS_functions.cosine_matrix(spectra, \n",
     "                                      tol = 0.2, \n",
     "                                      max_mz = 1000, \n",
     "                                      min_mz = 0, \n",
