--- a/notebooks/SeSiMe_MS_Grimur_spectra.ipynb
+++ b/notebooks/SeSiMe_MS_Grimur_spectra.ipynb
@@ -250,7 +250,8 @@
    "metadata": {},
    "source": [
     "### Calculate/load cosine scores \n",
-    "+ Calculating is much faster than the modified cosine score, but can still become **slow**, especially when using small tolerances and little filtering (resulting in many peaks...). "
+    "+ Calculating is a bit faster than the modified cosine score, but can still become **slow**, especially when using small tolerances and little filtering (resulting in many peaks...). \n",
+    "+ I made a faster function but that is based on another way of binning making it less comparable..."
    ]
   },
   {
