--- a/notebooks/SeSiMe_MS_gnps_unique_smiles_in-depth_examples.ipynb
+++ b/notebooks/SeSiMe_MS_gnps_unique_smiles_in-depth_examples.ipynb
@@ -565,6 +565,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Cosine score (tol = 0.02, min_match = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Could not find file  C:\\OneDrive - Netherlands eScience Center\\Project_Wageningen_iOMEGA\\SeSiMe\\data\\Cosine_gnps_uniquesmiles_tol002_minmatch1.npy\n",
+      "Cosine scores will be calculated from scratch.\n",
+      "Calculate pairwise cosine scores by  4 number of workers.\n",
+      "  Calculated cosine for pair  1002 -- 5402 . (  19.89  % done).r  978 -- 2830 . (  19.44  % done).3830 . (  19.44  % done).ne). % done). Calculated cosine for pair  91 -- 4135 . (  1.91  % done). 8152 . (  2.14  % done).113 -- 5290 . (  2.36  % done). 8234 . (  3.22  % done). 9414 . (  3.53  % done).178 -- 2030 . (  3.7  % done).8552 . (  3.79  % done). Calculated cosine for pair  183 -- 7185 . (  3.81  % done). % done).  -- 285 . (  3.96  % done).4.04  % done).. (  4.48  % done). % done). Calculated cosine for pair  252 -- 4277 . (  5.22  % done). 253 -- 8980 . (  5.25  % done). 256 -- 1095 . (  5.29  % done).-- 7494 . (  5.49  % done).. (  5.61 . (  5.62  % done).  % done). % done). Calculated cosine for pair  303 -- 9405 . (  6.27  % done).. (  6.44  % done). . (  Calculated cosine for pair   3226.65  -- 8902 . (  6.65  % done). % done). -- 5555 . (  6.76  % done). % done).  Calculated cosine for pair  351 -- 5725 . (  7.23  % done). . (  7.28  % done).  % done). 2552 . (  7.34  % done).4552 . (  7.35  % done). 7.53  % done).  Calculated cosine for pair  366 -- 8860 . (  7.54  % done). -- 8677 . (  7.56  % done). -- 2730 . (  7.77  % done). Calculated cosine for pair  378 -- 3730 . (  7.77  % done).-- 719 . (  7.88  % done).384 -- 2719 . (  7.89  % done). 384 -- 8719 . (  7.9  % done).-- 4390 . (  7.93  % done). Calculated cosine for pair  389 -- 7904 . (  8.0  % done). --  % done). 7744 . (  8.02  % done). . (  8.04  % done). -- 2427 . (  8.05  % done). 7427 . (  8.06  % done).. (  8.11  % done).-- 3959 . (  8.11  % done).6959 . (  8.12  % done). Calculated cosine for pair  406 -- 8320 . (  8.34  % done).410 -- 7754 . (  % done). 8.42  % done). -- 4802 . (  8.55  % done).774 . (  8.7  % done). Calculated cosine for pair  437 -- 3352 8484 . (  9.12  % done). % done). 453 -- 3680 . (  9.27  % done).9.28  % done). % done).. (  9.63  % done). Calculated cosine for pair  497 -- 7402 . (  10.15  % done). 501 -- 8200 . (  10.23  % done).. (  10.36  % done). 508 -- 6885 . (  10.37  % done).10.4  % done).10.83  % done). Calculated cosine for pair  532 10.96  % done). . (  11.15  % done). . (  11.22  % done). 566 -- 9160 . (  11.52  % done). -- 7489 . (  11.79  % done).7690 . (  11.91  % done). Calculated cosine for pair  588 -- 2765 . (  11.94  % done). -- 5765 . (  11.95  % done). 589 -- 8804 . (  11.97  % done). Calculated cosine for pair  603 -- 9455 . (  12.25  % done). Calculated cosine for pair  632 -- 4427 . (  12.81  % done).638 -- 8940 . (  12.93  % done).. (  12.99  % done). 680 . (  13.07  % done). 13.18  % done). % done). 13.29  % done).5910 . (  13.32  % done).-- 2204 . (  13.84  % done).13.84  % done). 14.13  % done). 750 -- 9124 . (  15.11  % done). 15.35  % done).763 -- 7815 . (  15.36  % done). 774 -- 7224 . (  15.57  % done). 16.34  % done).. (  16.7  % done). . (  17.12  % done).-- 7479 . (  17.29  % done). -- 7969 . (  17.67  % done). . (  17.71  % done).-- 5654 . (  17.76  % done). 8099 . (  17.96  % done). 18.03  % done). % done). Calculated cosine for pair  906 -- 7570 . (  18.09  % done). 907 -- 6927 . (  18.11  % done). 6454 . (  18.24  % done). % done). . (  18.47  % done). 18.51  % done).18.52  % done).  943 -- 3445 . (  18.78946 -- 3630 . (  18.84  % done).951 -- 7625 . (  18.94  % done). 18.95  % done). Calculated cosine for pair  963 -- 7515 . (  19.17  % done). 978 -- 4830 . (  19.44  % done). Calculated cosine for pair  988 -- 7165 . (  19.64  % done)."
+     ]
+    }
+   ],
+   "source": [
+    "filename = PATH_SAVE_DATA + \"Cosine_gnps_uniquesmiles_tol002_minmatch1.npy\"\n",
+    "cosine_sim = MS_functions.cosine_matrix(spectra, \n",
+    "                                      tol = 0.02, \n",
+    "                                      max_mz = 1000, \n",
+    "                                      min_mz = 0, \n",
+    "                                      min_match = 1, \n",
+    "                                      min_intens = 0,\n",
+    "                                      filename = filename,\n",
+    "                                      num_workers = 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Calculate/load molecular similarity scores\n",
     "+ first calculate molecular fingerprints\n",
     "+ then calculate (or load if file exists) molecular similarity scores.  \n",
